force-app/main/default/objects/StrategicObjective__c/StrategicObjective__c.object-meta.xml
<CustomObject>
    <label>Strategic Objective</label>
    <nameField>
        <label>Strategic Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>