force-app/main/default/objects/StrategicObjective__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Objective - Commercial Account</relationshipLabel>
    <relationshipName>Strategic_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>