force-app/main/default/objects/StrategicObjective__c/fields/AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>AccountPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>AccountPlan__c</referenceTo>
    <relationshipLabel>Strategic Objectives</relationshipLabel>
    <relationshipName>Strategic_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>