force-app/main/default/objects/StrategicObjective__c/fields/Action_to_Acc__c.field-meta.xml
<CustomField>
    <fullName>Action_to_Acc__c</fullName>
    <label>Action to Accomplish</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>