force-app/main/default/objects/StrategicObjective__c/fields/ChatterPostDate__c.field-meta.xml
<CustomField>
    <fullName>ChatterPostDate__c</fullName>
    <formula>EndDate__c + 1</formula>
    <label>ChatterPostDate</label>
    <type>Date</type>
</CustomField>