force-app/main/default/objects/StrategicObjective__c/fields/CustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfile__c</fullName>
    <label>Customer Profile</label>
    <referenceTo>CustomerProfile__c</referenceTo>
    <relationshipLabel>Strategic Objectives</relationshipLabel>
    <relationshipName>Strategic_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>