force-app/main/default/objects/StrategicObjective__c/fields/Descriptive_Name__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Name__c</fullName>
    <description>Strategic Objective Original Name</description>
    <label>Descriptive Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>