force-app/main/default/objects/StrategicObjective__c/fields/LatestAccountName__c.field-meta.xml
<CustomField>
    <fullName>LatestAccountName__c</fullName>
    <label>LatestAccountName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>