force-app/main/default/objects/StrategicObjective__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Strategic Objectives</relationshipLabel>
    <relationshipName>Strategic_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>