force-app/main/default/objects/StrategicObjective__c/fields/Opportunity_Space__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Space__c</fullName>
    <label>Opportunity Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibiotic Free</fullName>
            </value>
            <value>
                <fullName>Food with a Story</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Value Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>