force-app/main/default/objects/StrategicObjective__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>TextArea</type>
</CustomField>