force-app/main/default/objects/StrategicObjective__c/fields/Outcome_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Accomplished__c</fullName>
    <label>Outcome Accomplished</label>
    <type>TextArea</type>
</CustomField>