force-app/main/default/objects/StrategicObjective__c/fields/Size_of_Prize__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Prize__c</fullName>
    <label>Size of Prize</label>
    <type>TextArea</type>
</CustomField>