force-app/main/default/objects/StrategicObjective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  StartDate__c &gt; TODAY(),
       &quot;Pending&quot;,
       IF(OR(EndDate__c &gt; TODAY(), ISNULL(EndDate__c),ISBLANK(EndDate__c)),
       &quot;Active&quot;,
       &quot;Expired&quot;
  ))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>