force-app/main/default/objects/StrategicObjective__c/validationRules/IsActiveStrategicObjective.validationRule-meta.xml
<ValidationRule>
    <fullName>IsActiveStrategicObjective</fullName>
    <active>true</active>
    <description>The strategic Objective should be Active i.e. End Date is not expired.</description>
    <errorConditionFormula>EndDate__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Strategic Objective cannot have an End Date in the past</errorMessage>
</ValidationRule>