force-app/main/default/objects/StrategicObjective__c/validationRules/RestrictStrategicObjectiveNameUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictStrategicObjectiveNameUpdate</fullName>
    <active>true</active>
    <description>Strategic Objective Name cannot be updated. It can be editable only at the time of creation.</description>
    <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISCHANGED(Name), 
$Profile.Name &lt;&gt; &#39;System Administrator&#39; 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Strategic Objective Name cannot be changed.</errorMessage>
</ValidationRule>